# semver-release

./: CHANGELOG.md  Cargo.toml  README.md  config.semver.json  sample.config.semver.json  test.md
.build/: x86_64-unknown-linux-gnu-gcc
.cargo/: config.toml
.github/workflows/: release.yml  test.yml
.hooks/: commit-msg  pre-commit
.release/: semver  semver-cargo  semver-linux  semver-release  semver_linux
commit-rules/: conventional-commits.yml
examples/: analyze_commits_example.rs
sample/: sample.config.semver.yml
src/: args.rs  lib.rs  main.rs  mock.rs  models.rs  semver.rs  tools.rs  utils.rs
src/mock/: analyze_commits_mock.rs  mock_change.rs  mock_changelist.rs  mock_commit.rs  mock_commit_map.rs  mock_version.rs
src/models/: alert.rs  change.rs  change_list.rs  commit.rs  commit_bucket.rs  commit_map.rs  config.rs  env.rs  log_level.rs  version.rs
src/tools/: analyzer.rs  changelog.rs  git.rs  log.rs
src/tools/analyzer/: analyze_commits.rs
src/tools/git/: auth.rs  commit_all.rs  fetch.rs  get_commits.rs  github.rs  latest_tag.rs  push.rs  save.rs  tag.rs
src/tools/git/auth/: github.rs
src/utils/: parse_args.rs  parse_vars.rs  plugins.rs  run_command.rs
tests/: integration_tests.rs  test.config.semver.json  test_env.rs
