[package]
name = "semver-release"
version = "0.15.0"
edition = "2024"
authors = ["Nicholas Raynes"]
description = "A simple semantic versioning tool. Can be used in a release workflow as a command line tool with plugins."
license  = "MIT"
repository = "https://github.com/nraynes/semver-release"
keywords = ["semver", "release", "semantic", "project", "tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
chrono = "0.4.44"
derive-getters = "0.5.0"
r_log = "0.2.2"
regex = "1.12.3"
semver-common = "0.6.8"
serde = { version = "1.0.228", features = ["derive"] } 
serde_json = "1.0.149"
