[package]
name = "semver-release"
version = "1.0.0"
edition = "2024"
authors = ["Nicholas Raynes"]
description = "A simple semantic versioning tool. Can be used in a release workflow as a command line tool with plugins."
license  = "MIT OR Apache-2.0"
repository = "https://github.com/nraynes/semver-release"
keywords = ["semver", "release", "semantic", "project", "tools"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "src/",
    "examples/",
    "Cargo.toml",
    "LICENSES/",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
    "build.rs",
]

[dependencies]
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
derive-getters = "0.5.0"
r_log = "0.3.3"
regex = "1.12.3"
semver-common = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] } 
serde_json = "1.0.149"

[build-dependencies]
clap = { version = "4.6.1", features = ["derive"] }
clap_mangen = "0.3.0"

[dev-dependencies]
assert_cmd = "2.2.1"
assert_fs = "1.1.3"
predicates = "3.1.4"
